compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__module_could_not_unify7.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 753
expression: "fn main() { let assert 5 = \"\" }"
snapshot_kind: text
---
----- SOURCE CODE
fn main() { let assert 5 = "" }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:24
  │
1 │ fn main() { let assert 5 = "" }
  │                        ^

Expected type:

    String

Found type:

    Int
